include/sysworxx_io.h

typedef uint8_t IoAnalogMode;
typedef uint8_t IoBool;
typedef uint8_t IoCntDirection;
typedef uint8_t IoCntMode;
typedef uint8_t IoCntTrigger;
typedef uint8_t IoInputTrigger;
typedef uint8_t IoPwmTimebase;
typedef uint32_t IoResult;
typedef uint8_t IoTmpMode;
typedef uint8_t IoTmpSensorType;
/**
 * @brief Hardware information structure
 *
 * This structure will be filled by IoGetHardwareInfo. It contains the
 * revision information as well as the channel counts for the different
 * peripherals.
 */
struct IoHwInfo
{
    /**
     * The PCB revision number
     */
    uint8_t m_uPcbRevision;
    /**
     * Number of digital inputs
     */
    uint8_t m_uDiChannels;
    /**
     * Number of digital outputs
     */
    uint8_t m_uDoChannels;
    /**
     * Number of analog inputs
     */
    uint8_t m_uAiChannels;
    /**
     * Number of analog outputs
     */
    uint8_t m_uAoChannels;
    /**
     * Number of temperature inputs
     */
    uint8_t m_uTmpChannels;
    /**
     * Number of counter channels
     */
    uint8_t m_uCntChannels;
    /**
     * Number of A/B decoder channels
     */
    uint8_t m_uEncChannels;
    /**
     * Number of PWM channels
     */
    uint8_t m_uPwmChannels;
    /**
     * Number of real digital inputs (legacy)
     */
    uint8_t m_uLegacyDiChannels;
    /**
     * Number of real digital outputs (legacy)
     */
    uint8_t m_uLegacyDoChannels;
    /**
     * Number of relay outputs (legacy)
     */
    uint8_t m_uLegacyRelayChannels;
    /**
     * Offset of relay outputs in DO channels (legacy)
     */
    uint8_t m_uLegacyRelayOffset;
};
/**
 * @brief Setup the counters mode
 *
 * @param uChannel_p The channel to setup
 * @param uMode_p The mode of the counter, see IoCntMode
 * @param uTrigger_p The trigger of the counter, see IoCntTrigger
 * @param uDir_p The direction of counting, see IoCntDirection
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoCntSetup(uint8_t uChannel_p,
                    IoCntMode uMode_p,
                    IoCntTrigger uTrigger_p,
                    IoCntDirection uDir_p);
/**
 * @brief Set the initial value of the counter
 *
 * @param uChannel_p The channel to setup
 * @param iPreload_p The initial value to set
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoCntSetPreload(uint8_t uChannel_p, int32_t iPreload_p);
/**
 * @brief Get the value of a counter channel
 *
 * @param uChannel_p The channel to get the value for
 * @param piValue_p Pointer to the value destination
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `piValue_p` must be a valid pointer
 */
IoResult IoCntGetValue(uint8_t uChannel_p, int32_t *piValue_p);
/**
 * @brief Enable PWM output
 *
 * @param uChannel_p The channel of the digital output
 * @param fRun_p The value to set
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoPwmEnable(uint8_t uChannel_p, bool fRun_p);
/**
 * @brief Setup an PWM channel
 *
 * @param uChannel_p The channel to setup
 * @param period The periode of the PWM
 * @param duty_cycle The duty cycle of the PWM
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoPwmSetup(uint8_t uChannel_p, uint16_t period, uint16_t duty_cycle);
/**
 * @brief Set the timebase for PWM output
 *
 * @param uChannel_p The channel to get the value for
 * @param timebase Timebase enum
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoPwmSetTimebase(uint8_t uChannel_p, IoPwmTimebase timebase);