Bindings/CSharp/SysworxxIo/SysworxxIoNative.cs


        /// <summary>
        ///  @brief Setup the counters mode
        ///
        ///  @param uChannel_p The channel to setup
        ///  @param uMode_p The mode of the counter, see IoCntMode
        ///  @param uTrigger_p The trigger of the counter, see IoCntTrigger
        ///  @param uDir_p The direction of counting, see IoCntDirection
        ///  @return IoResult Driver result code of type IoResult
        /// </summary>
        [DllImport(__DllName, EntryPoint = "IoCntSetup", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IoResult IoCntSetup(byte uChannel_p, IoCntMode uMode_p, IoCntTrigger uTrigger_p, IoCntDirection uDir_p);

        /// <summary>
        ///  @brief Set the initial value of the counter
        ///
        ///  @param uChannel_p The channel to setup
        ///  @param iPreload_p The initial value to set
        ///  @return IoResult Driver result code of type IoResult
        /// </summary>
        [DllImport(__DllName, EntryPoint = "IoCntSetPreload", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IoResult IoCntSetPreload(byte uChannel_p, int iPreload_p);

        /// <summary>
        ///  @brief Get the value of a counter channel
        ///
        ///  @param uChannel_p The channel to get the value for
        ///  @param piValue_p Pointer to the value destination
        ///  @return IoResult Driver result code of type IoResult
        /// </summary>
        [DllImport(__DllName, EntryPoint = "IoCntGetValue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IoResult IoCntGetValue(byte uChannel_p, int* piValue_p);

        /// <summary>
        ///  @brief Set the timebase for PWM output
        ///
        ///  @param uChannel_p The channel to set the value for
        ///  @param timebase Timebase enum
        ///  @return IoResult Driver result code of type IoResult
        /// </summary>
        [DllImport(__DllName, EntryPoint = "IoPwmSetTimebase", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IoResult IoPwmSetTimebase(byte uChannel_p, IoPwmTimebase timebase);

        /// <summary>
        ///  @brief Setup an PWM channel
        ///
        ///  @param uChannel_p The channel to setup
        ///  @param period The periode of the PWM
        ///  @param duty_cycle The duty cycle of the PWM
        ///  @return IoResult Driver result code of type IoResult
        /// </summary>
        [DllImport(__DllName, EntryPoint = "IoPwmSetup", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IoResult IoPwmSetup(byte uChannel_p, ushort period, ushort duty_cycle);

        /// <summary>
        ///  @brief Enable/Disable PWM output
        ///
        ///  @param uChannel_p The channel of the digital output
        ///  @param fRun_p The value to set
        ///  @return IoResult Driver result code of type IoResult
        /// </summary>
        [DllImport(__DllName, EntryPoint = "IoPwmEnable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IoResult IoPwmEnable(byte uChannel_p, [MarshalAs(UnmanagedType.U1)] bool fRun_p);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct IoHwInfo
    {
        public byte m_uPcbRevision;
        public byte m_uDiChannels;
        public byte m_uDoChannels;
        public byte m_uAiChannels;
        public byte m_uAoChannels;
        public byte m_uTmpChannels;
        public byte m_uCntChannels;
        public byte m_uEncChannels;
        public byte m_uPwmChannels;
        public byte m_uLegacyDiChannels;
        public byte m_uLegacyDoChannels;
        public byte m_uLegacyRelayChannels;
        public byte m_uLegacyRelayOffset;
    }


    internal enum IoResult : uint
    {
        Success = 0,
        Error = 255,
        NotImplemented = 254,
        InvalidParameter = 253,
        InvalidChannel = 252,
        InvalidMode = 251,
        InvalidTimebase = 250,
        InvalidDelta = 249,
        PtoParamTabFull = 248,
        DevAccessFailed = 247,
        Reserved0 = 246,
        Reserved1 = 245,
        ShpImgError = 244,
        AddressOutOfRange = 243,
        WatchdogTimeout = 242,
    }

    internal enum IoBool : byte
    {
        False = 0,
        True = 1,
    }

    internal enum IoInputTrigger : byte
    {
        None = 0,
        RisingEdge = 1,
        FallingEdge = 2,
        BothEdge = 3,
    }

    internal enum IoAnalogMode : byte
    {
        Voltage = 0,
        Current = 1,
    }

    internal enum IoTmpMode : byte
    {
        RtdTwoWire = 0,
        RtdThreeWire = 1,
        RtdFourWire = 2,
    }

    internal enum IoTmpSensorType : byte
    {
        PT100 = 0,
        PT1000 = 1,
    }

    internal enum IoCntMode : byte
    {
        Counter = 0,
        ABEncoder = 1,
    }

    internal enum IoCntTrigger : byte
    {
        RisingEdge = 0,
        FallingEdge = 1,
        AnyEdge = 2,
    }

    internal enum IoCntDirection : byte
    {
        Up = 0,
        Down = 1,
    }

    internal enum IoPwmTimebase : byte
    {
        Ns800 = 1,
        Ms1 = 2,
    }


}
